fix dialog skin cut off

--- a/src/bar.scss
+++ b/src/bar.scss
@@ -10,6 +10,7 @@
   transition: bottom 500ms;
   overflow: hidden;
   z-index: 2147483646;
+  padding: 0 20px;
 }
 .nps-preview .nps-Bar {
   position: absolute;
