--- a/src/survey.scss
+++ b/src/survey.scss
@@ -18,5 +18,4 @@
 .nps-Survey-content {
   position: relative;
   top: 0;
-  margin: 0 20px;
 }
